GNOME Bugzilla – Bug 678205
Contact gets displayed in the wrong group
Last modified: 2012-06-19 11:38:25 UTC
With the new contact list and groups enabled, I noticed this morning that a contact (see first attachment, Olav) was displayed under the wrong heading; showing and hiding back unconnected contacts restored the correct display. (see second attachment).
Created attachment 216554 [details] missing groups, Olav looks like he is in the "entrouvert" group
Created attachment 216555 [details] after hide/show disconnected contacts, everything is back in order
The problem is actually that the 'GNOME' group title is not displayed.
Created attachment 216733 [details] [review] roster-view: add_to_displayed: get the proper EmpathyRosterGroup object The contacts hash table is a group-name => EmpathyRosterContact mapping. We need to use the self->priv->roster_groups hash to get the EmpathyRosterGroup object which is the one we want to refilter.
Created attachment 216734 [details] [review] roster-view: add_to_displayed: no need to try refiltering groups in non group mode
Attachment 216733 [details] pushed as 9479413 - roster-view: add_to_displayed: get the proper EmpathyRosterGroup object Attachment 216734 [details] pushed as b7d71d0 - roster-view: add_to_displayed: no need to try refiltering groups in non group mode