roster-view: add_to_displayed: get the proper EmpathyRosterGroup object

The contacts hash table is a group-name => EmpathyRosterContact mapping. We
need to use the self->priv->roster_groups hash to get the EmpathyRosterGroup
object which is the one we want to refilter.

https://bugzilla.gnome.org/show_bug.cgi?id=678205